Fixed font on smaller devices

--- a/themes/GCI/scr/scss/partials/nav.scss
+++ b/themes/GCI/scr/scss/partials/nav.scss
@@ -18,6 +18,10 @@
     font-size: 2rem;
   }
 
+  @include media-breakpoint-down(sm) {
+    font-size: 1rem;
+  }
+
   @include media-breakpoint-up(xl) {
     font-size: 1.5rem;
   }
